<resources>
    <string name="app_name">Tukang Cukur 29</string>
    <string name="forget_password">Lupa password?</string>
    <string name="password_required">Password diperlukan</string>
    <string name="email_format">Format Email salah</string>
    <string name="email_required">Email diperlukan</string>
    <string name="password_confirm_required">Konfirmasi password diperlukan</string>
    <string name="password_length">Password tidak boleh kurang dari 8 karakter</string>
    <string name="invalid_confirm_password">Konfirmasi password tidak sesuai</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Kembali Login</string>
    <string name="unregistered_email">Email tidak terdaftar</string>
    <string name="registration_failed">Pendaftaran gagal</string>
    <string name="please_login_first">Silahkan masuk terlebih dahulu</string>
    <string name="add_user_failed">Gagal menambahkan data pengguna ke database</string>
    <string name="delete">Hapus</string>
    <string name="upload">Unggah</string>
    <string name="new_email">Email baru</string>
    <string name="update">Perbarui</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">Password baru</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="confirm_password">Konfirmasi password</string>
    <string name="reset">Mengatur ulang</string>
    <string name="username">Nama Pengguna</string>
    <string name="logout">Keluar</string>
    <string name="update_password">Perbarui password</string>
    <string name="download">Unduh</string>
    <string name="up_down_report">Unggah unduh</string>
    <string name="authentication_failed">Otentikasi gagal, email atau password Anda salah</string>
    <string name="user">Pengguna</string>
    <string name="delete_image">Apakah Anda yakin, ingin menghapus poto profil?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="email_not_verified">Email belum diverifikasi</string>
    <string name="verification">Verifikasi</string>
    <string name="send_verification">email %s, pilih Kirim untuk melanjutkan</string>
    <string name="send">Kirim</string>
    <string name="update_email">Perbarui Email</string>
    <string name="request_new_email">Apakah Anda yakin, ingin menggati email %s dengan yang baru</string>
    <string name="email_verification_sent">Verifikasi email %s sudah terkirim</string>
    <string name="sub_data">Data</string>
    <string name="report">Laporan</string>
    <string name="sub_manage">Mengelola</string>
    <string name="sub_addition">Tambahan</string>
    <string name="role">Peran</string>
    <string name="failed">Gagal</string>
    <string name="no_data_available_user">Tidak ada data pengguna yang tersedia</string>
    <string name="add_customer">Tambah pelangggan</string>
    <string name="f_add_customer_exists">Data pelanggan dengan nomor telepon %s sudah ada, pilh <b>Lihat</b></string>
    <string name="profile">Profil</string>
    <string name="transaction">Transaksi</string>
    <string name="customer">Pelanggan</string>
    <string name="save">Simpan</string>
    <string name="notes">Catatan</string>
    <string name="phone_number">Nomor telepon</string>
    <string name="hairstyle">Gaya Rambut</string>
    <string name="shaving_date">Tangggal Cukur</string>
    <string name="f_delete_user">Apakah Anda yakin, ingin menghapus %s</string>
    <string name="sorry">Maaf</string>
    <string name="f_firebase_billing_plans">Paket penagihan Firebase masih menggunakan %s, harus ditingkatkan ke %s</string>
    <string name="spark">Spark (Tanpa biaya $0/bulan)</string>
    <string name="blaze">Blaze (Bayar sesuai pemakaian)</string>
    <string name="customer_required">Pelanggan diperlukan</string>
    <string name="phone_number_required">Nomor telepon diperlukan</string>
    <string name="hairstyle_required">Gaya rambut diperlukan</string>
    <string name="shaving_date_required">Tanggal cukur diperlukan</string>
    <string name="add_transaction">Tambah Transaksi</string>
    <string name="notes_required">Catatan diperlukan</string>
    <string name="next">Lanjut</string>
    <string name="open_in_new">Buka di baru</string>
    <string name="no_data_available_shaving">Tidak ada data transaksi/cukur yang tersedia</string>
    <string name="no_data_available_customer">Tidak ada data pelanggan yang tersedia</string>
    <string name="look">Lihat</string>
    <string name="f_delete_customer">Apakah Anda yakin, ingin menghapus pelanggan %s</string>
    <string name="f_delete_transaction">Apakah Anda yakin, ingin menghapus transaksi pada tanggal %s</string>
    <string name="f_delete_report">Apakah Anda yakin, ingin menghapus laporan pada tanggal %s</string>
    <string name="f_delete_pdf">Apakah Anda yakin, ingin menghapus laporan pdf %s</string>
    <string name="f_send_shaving">Apakah Anda yakin, ingin mengirim transaksi tanggal %s untuk diteruskan ke <b>Kasir</b></string>
    <string name="f_delete_shaving">Apakah Anda yakin, ingin menghapus transaksi pada tanggal %s</string>
    <string name="default_email">administrator@gmail.com</string>
    <string name="reminder">Pengingat!</string>
    <string name="do_not_change_the_default_email">Anda masuk menggunakan <b>email</b> default, silahkan perbarui <b>kata sandi</b> default-nya!, dan daftarkan <b>email baru</b> ke tingkat <b>Administrator</b>!</string>
    <string name="email_must_be_verified">Silahkan Anda verifikasi email untuk terus menggunakan aplikasi</string>
    <string name="send_transaction">Kirim Transaksi</string>
    <string name="price">Harga/Tarif</string>
    <string name="price_required">Harga/Tarif diperlukan</string>
    <string name="edit">Ubah</string>
    <string name="edit_role">Ubah Peran</string>
    <string name="role_required">Peran diperlukan</string>
    <string name="info">Info</string>
    <string name="no_data_available_transaction">Tidak ada data transaksi yang tersedia</string>
    <string name="f_message_transaction">Transaksi tanggal %s dengan status pembayaran %s</string>
    <string name="f_message_report">Transaksi tanggal %s dengan status pembayaran %s sudah masuk ke laporan</string>
    <string name="f_add_transaction_exists">Data transaksi pelanggan %s sudah ada, pilih <b>Lihat</b></string>
    <string name="f_add_report_exists">Data laporan transaksi tanggal %s sudah ada, pilih <b>Lihat</b></string>
    <string name="employee">Karyawan</string>
    <string name="add_role_failed">Gagal menambahkan data peran ke database</string>
    <string name="unknown_role">Peran Tidak Diketahui</string>
    <string name="administrator">Administrator</string>
    <string name="new_password_required">Password baru diperlukan</string>
    <string name="confirm_new_password">Konfirmasi password baru</string>
    <string name="confirm_new_password_required">Konfirmasi password baru diperlukan</string>
    <string name="invalid_confirm_new_password">Konfirmasi password baru tidak sesuai</string>
    <string name="new_email_required">Email baru diperlukan</string>
    <string name="filter_transaction">Menyaring transaksi</string>
    <string name="paid_off">Sudah dibayar</string>
    <string name="not_yet_paid">Belum dibayar</string>
    <string name="many_customers">Banyak Pelanggan <b>%s</b></string>
    <string name="many_transactions">Banyak Transaksi <b>%s</b></string>
    <string name="shaving">Cukur</string>
    <string name="add_shaving">Tambah Cukur</string>
    <string name="payment">Pembayaran</string>
    <string name="status_payment">Status pembayaran</string>
    <string name="edit_payment_status">Ubah status pembayaran</string>
    <string name="edit_report_status">Ubah status laporan</string>
    <string name="payment_status_required">Status pembayaran diperlukan</string>
    <string name="only_admin_can_change_transaction">Hanya Admin/Kasir yang dapat merubah status transaksi</string>
    <string name="only_employee_can_change_report">Hanya Karyawan bersangkutan yang dapat merubah status laporan</string>
    <string name="filter_report">Menyaring laporan</string>
    <string name="no_data_available_report">Tidak ada data laporan yang tersedia</string>
    <string name="create_pdf_report">Buat laporan pdf</string>
    <string name="payment_status">Status pembayaran</string>
    <string name="transaction_data_has_been_paid">Data transaksi tanggal %s sudah dibayar, jika ada kesalahan, silahkan pilih ubah</string>
    <string name="select_user">Pilih pengguna</string>
    <string name="select_report_date">Pilih tangggal laporan</string>
    <string name="report_date">Tanggal laporan</string>
    <string name="username_required">Nama pengguna diperlukan</string>
    <string name="report_date_required">Tanggal laporan diperlukan</string>
    <string name="select_month">Pilih bulan</string>
    <string name="select_year">Pilih tahun</string>
    <string name="select_report_status">Pilih status laporan</string>
    <string name="select_payment_status">Pilih status pembayaran</string>
    <string name="select_role">Pilih peran</string>
    <string name="report_status_required">Setatus laporan diperlukan</string>
    <string name="finished">Selesai</string>
    <string name="not_finished_yet">Belum selesai</string>
    <string name="view_pdf_report">Lihat laporan pdf</string>
    <string name="no_data_available_pdf">Tidak ada data laporan pdf yang tersedia</string>
    <string name="again">Coba lagi</string>
    <string name="report_pdf">Laporan Pdf</string>
    <string name="detail_pdf">Detail pdf</string>
    <string name="description_app">Tukang Cukur 29 adalah aplikasi praktis untuk mencatat data pelanggan, transaksi, laporan, dan pendapatan karyawan dalam usaha tukang cukur. Dengan fitur yang efisien, Anda dapat mengatur dan melacak informasi usaha tukang cukur dengan mudah. Catat pelanggan, transaksi, dan pantau perkembangan usaha Anda dengan Tukang Cukur 29!</string>
    <string name="app_version">Versi %s (Kode Versi %d)</string>
    <string name="permission_is_required">Izin penyimpanan diperlukan</string>
</resources>