<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_nav_user"
        android:layout_width="@dimen/image_nav_size"
        android:layout_height="@dimen/image_nav_size"
        android:layout_margin="@dimen/vertical_margin"
        android:background="@android:color/white"
        android:contentDescription="@string/nav_header_desc"
        android:elevation="@dimen/elevation_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/tv_nav_username"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CircleImageView"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_nav_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/tv_nav_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/img_nav_user"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_nav_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:text="@string/nav_header_subtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_nav_username"
        app:layout_constraintStart_toStartOf="@+id/tv_nav_username"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>